# VSProxy

./: Cargo.toml  README.md  install.sh  menu.sh
src/: http_handler.rs  https.rs  main.rs  menu.sh  mod.rs  security.rs  socks.rs  socks5.rs  tcp_fallback.rs  tls.rs  websocket.rs  wsproxy.rs
src/protocolos/: multistatus.rs  socks5.rs  websocket.rs
