[package]
name = "multi-proxy"
version = "0.1.0"
edition = "2026"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
sha1 = "0.10"
base64 = "0.22"
bytes = "1.5"
uuid = { version = "1.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dashmap = "5.5"
lazy_static = "1.4"
